--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,9 +1,8 @@
 @import '@/node_modules/@trevio/ui/dist/style.css';
 
 body {
-  @apply text-base;
+  @apply text-base bg-slate-50;
   font-family: 'Montserrat', sans-serif;
-  background-color: #fafbfc;
 }
 
 html,
